# serializer version: 1
# name: TestContract.test_should_return_same_hash_in_different_processes[column]
  2158421768275916388
# ---
# name: TestContract.test_should_return_same_hash_in_different_processes[constant]
  710604215793755931
# ---
# name: TestContract.test_should_return_same_hash_in_different_processes[date, column]
  3351686242835407272
# ---
# name: TestContract.test_should_return_same_hash_in_different_processes[date, int]
  1048293479160868681
# ---
